@@ -1,4 +1,5 @@
 version 0.5.0 - currently working on
+- Feature: Added more information to the team records (#247)
 - Code cleanup (#804)
 - Feature: Allow to select the source of person selection in the BOX Module (#229)
 - Change: Added info regarding kj_imagelightbox2 to the manual
